// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components test auto_play 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            aaa
          </span>
          <span
            style={Object {}}
          >
            。
          </span>
          <span
            style={Object {}}
          >
            
          </span>
          <span
            style={Object {}}
          >
            uuu
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            bbb
          </span>
          <br
            style={Object {}}
          />
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
            </span>
          </span>
          <br
            style={Object {}}
          />
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
            </span>
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            ffffffffffffffffffffffffff
          </span>
          <span
            style={Object {}}
          >
            ggg
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            hhh
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            iii
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_16"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/auto_play/test.png"
      style={
        Object {
          "delay": 0,
          "opacity": 0,
        }
      }
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test auto_play 2`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            あああ
          </span>
          <span
            style={Object {}}
          >
            。
          </span>
          <span
            style={Object {}}
          >
            
          </span>
          <span
            style={Object {}}
          >
            いいい
          </span>
          <span
            style={Object {}}
          >
            ううう
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            えええ。おおお
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_16"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/auto_play/test.png"
      style={
        Object {
          "delay": 0,
          "opacity": 0,
        }
      }
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test image 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_18"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/image/test.png"
    />
    <img
      className="ender-image image-right"
      id="imageuuid_mock_20"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/image/test.png"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test import 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <style>
      display: block;
    </style>
  </div>
  <div
    className="ender-box "
  >
    <div
      className="ender-box test1"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test include 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            2
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_27"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/include/test.png"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test include 2`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            2
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_27"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/include/test.png"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test include 3`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            3
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            終わり
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_27"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/include/test.png"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test input 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <input
      className="ender-input-range "
      id="input-rangeuuid_mock_37"
      max={1}
      min={0}
      onChange={[Function]}
      step={0.1}
      type="range"
      value={1}
    />
    <input
      className="ender-input-text "
      id="input-textuuid_mock_46"
      onChange={[Function]}
      type="text"
      value="デフォルト"
    />
    <label
      className=""
      htmlFor="inputuuid_mock_115"
    >
      gain
      <input
        className="ender-input-number "
        id="inputuuid_mock_115"
        onChange={[Function]}
        type="number"
        value={1}
      />
    </label>
    <input
      checked={null}
      className="ender-input-checkbox "
      id="input-checkboxuuid_mock_81"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="ender-input-radio "
      id="input-radiouuid_mock_99"
    >
      <div>
        <label
          htmlFor="input-radiouuid_mock_99-a"
        >
          <span>
            a
          </span>
        </label>
        <input
          checked={true}
          id="input-radiouuid_mock_99-a"
          onChange={[Function]}
          type="radio"
          value="a"
        />
      </div>
      <div>
        <label
          className=""
          htmlFor="input-radiouuid_mock_99-b"
        >
          b
        </label>
        <input
          checked={false}
          id="input-radiouuid_mock_99-b"
          onChange={[Function]}
          type="radio"
          value="b"
        />
      </div>
    </div>
    <select
      className="ender-select "
      id="selectuuid_mock_116"
      onChange={[Function]}
      value="a"
    >
      <option
        value="a"
      >
        a
      </option>
      <option
        value="b"
      >
        b
      </option>
    </select>
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test lambda 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test lambda 2`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            2
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test lambda 3`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test layout_base 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box sample"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test literal 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            a: 
          </span>
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            b: {a: 
          </span>
          <span
            style={Object {}}
          >
            1
          </span>
          <span
            style={Object {}}
          >
            }
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            c: [
          </span>
          <span
            style={Object {}}
          >
            1
          </span>
          <span
            style={Object {}}
          >
            , 
          </span>
          <span
            style={Object {}}
          >
            1
          </span>
          <span
            style={Object {}}
          >
            ]
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test load 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            2
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  >
    <img
      className="ender-image image-center"
      id="imageuuid_mock_127"
      onLoad={[Function]}
      src="/Users/kmac/Documents/srss/Ender/tests/load/test.png"
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test load 2`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            aaa
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            bbb
          </span>
          <br
            style={Object {}}
          />
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                c
              </span>
            </span>
          </span>
          <br
            style={Object {}}
          />
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                e
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                d
              </span>
            </span>
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            fff
          </span>
          <span
            style={Object {}}
          >
            ggg
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            hhh
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            iii
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box 2`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            あああ
          </span>
          <span
            style={Object {}}
          >
            。
          </span>
          <span
            style={Object {}}
          >
            
          </span>
          <span
            style={Object {}}
          >
            いいい
          </span>
          <span
            style={Object {}}
          >
            ううう
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            えええ。おおお
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box 3`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box 4`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box 5`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
    <pre
      className="ender-history "
    >
      aaa
bbb
ccc
ddd
fffggg
hhh
iii
あああ。いいいううう
えええ。おおお
あいうえおかきくけこ
    </pre>
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test message_box_ruby 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            前
          </span>
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                ﹅
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
            </span>
          </span>
          <span
            style={Object {}}
          >
            後
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            前
          </span>
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
            </span>
          </span>
          <span
            style={Object {}}
          >
            後
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            前
          </span>
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
            </span>
          </span>
          <span
            style={Object {}}
          >
            後
          </span>
          <br
            style={Object {}}
          />
          <span
            style={Object {}}
          >
            前
          </span>
          <span
            className="ender-ruby"
          >
            <span
              className="ender-rt"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                い
              </span>
            </span>
            <span
              className="ender-rb"
              style={Object {}}
            >
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
              <span
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                あ
              </span>
            </span>
          </span>
          <span
            style={Object {}}
          >
            後
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test movie 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <div
    className="ender-box "
  />
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test set_return_value 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-box "
    >
      <div
        className="ender-messageBox "
      >
        <div
          className="ender-messageBox-inner"
        >
          <span
            style={Object {}}
          >
            1
          </span>
          <br
            style={Object {}}
          />
          <span
            className="marker"
          >
            ▼
          </span>
        </div>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;

exports[`components test variable 1`] = `
<div
  className="inner-view"
  id="inner"
>
  <div
    className="ender-box "
  >
    <div
      className="ender-messageBox "
    >
      <div
        className="ender-messageBox-inner"
      >
        <span
          style={Object {}}
        >
          test
        </span>
        <br
          style={Object {}}
        />
        <span
          style={Object {}}
        >
          string
        </span>
        <br
          style={Object {}}
        />
        <span
          className="marker"
        >
          ▼
        </span>
      </div>
    </div>
    <div
      className="full"
      onClick={[Function]}
    />
  </div>
  <span>
    AudioEngine mock
  </span>
</div>
`;
